# dmt-gen-common

./: .gitignore  .gitlab-ci.yml  .pylintrc  .pypirc  publish.sh  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: publish.yml  testing.yml
src/dmtgen/common/: package.py
tests/test_data/apps/: package.json
tests/test_data/apps/EmployeeApp/: Employee.blueprint.json  EmployeeApp.blueprint.json
